--- a/vapp.css
+++ b/vapp.css
@@ -1,3 +1,16 @@
+ body {
+            /* Setting body margins to 0 to have proper positioning of #container div */
+            margin: 0;
+        }
+ 
+            /* #container div with absolute position and 100% width and height so it takes up whole window */
+        #container {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+
+
 #page .ui-field-contain{
 margin-top : 3em;	
 	
